fixes button alignment

--- a/src/scss/5-components/_button.scss
+++ b/src/scss/5-components/_button.scss
@@ -4,7 +4,7 @@ button, .button {
 	letter-spacing: 0.0375em;
 	display: inline-block;
 	border: 2px solid $brand-color;
-	padding: 0.375em 1em 0.5em 1em;
+	padding: 0.425em 1em 0.5em 1em;
 	text-decoration: none;
 	overflow: hidden;
 	z-index: 1;
